# DistanceMapsEvaluation

./: .gitignore  CMakeLists.txt  README.md  SuperBuild.cmake  compile-pipeline.sh  run-pipeline.sh
CMake/: ExternalProjectDependency.cmake  environment.sh.in
ITKBruteForceDist/: CMakeLists.txt  itkBruteForce.cxx  itkObjectToObjectDistanceMap.h  itkObjectToObjectDistanceMap.hxx
ITKCropImg/: CMakeLists.txt  itkCheck.cxx  itkCrop.cxx
ITKMaurerDist/: CMakeLists.txt  itkMaurer.cxx
ITK_GRID_ERROR_DIFFERENCES/: CMakeLists.txt  LRPCombinedLabelMap.nrrd  itkGrid.cpp
ITK_GRID_ERROR_DIFFERENCES/includes/: ComputeDistancesGrid.h  ComputeDistancesGrid.hxx
SuperBuild/: External_Dataset.cmake  External_ITK.cmake  External_TCLAP.cmake  External_VTK.cmake  External_itkBoundingBox.cmake  External_itkDistanceImageFilter.cmake  External_itkImageCompare.cmake  External_itkImageConvert.cmake  External_itkImageCrop.cmake  External_itkImagePad.cmake  External_itkImageResample.cmake  External_itkLabelExtract.cmake  External_itkMaurerDistance.cmake  External_itkRadialDistance.cmake  External_itkSphereImageGenerator.cmake
Testing/: CMakeLists.txt  hepaticvessel_151.nii.gz.sha256  hepaticvessel_151_unified.nii.sha256  liver_000_resampled_100.nrrd.sha256  sphere_100_1_20.nii.sha256  sphere_101_1_20.nii.sha256  sphere_101_1_20_cropped.nii.sha256  sphere_101_1_20_float.nrrd.sha256  sphere_101_1_20_radial.nii.sha256  sphere_141_1_20.nii.sha256
VTKHausdorff/: #vtkHausdorffDist.cxx#  CMakeLists.txt  vtkHausdorffDist.cxx
VTKHausdorff/HausdorffDistanceOctrees/: vtkHausdorffDistanceOctreesFilter.cxx  vtkHausdorffDistanceOctreesFilter.h
VTKHausdorff/HausdorffDistancePointLocator/: vtkHausdorffDistancePointLocatorFilter.cxx  vtkHausdorffDistancePointLocatorFilter.h
scripts/: distance_sphere_test.sh  generate_dataset.sh  run_experiment.sh
vtk2vtp/: CMakeLists.txt  vtk2vtp.cxx
